--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ llama-index-vector-stores-chroma==0.5.0
 llama-index-vector-stores-pinecone==0.7.0
 streamlit==1.47.1
 chromadb==1.0.15
-
+python-dotenv=1.1.1
